--- a/app/twig/index.twig
+++ b/app/twig/index.twig
@@ -220,7 +220,7 @@
                 <div class="arrow-wrapper-3 wow fadeIn" data-wow-offset="350">
                     <div class="arrow arrow_3">
                         <p class="mb10">Новый раздел «Статьи»</p>
-                        <p><a href="http://www.chistovie.ru/articles/" class="default-link" target="_blank">http://www.chistovie.ru/articles//</a></p>
+                        <p><a href="http://www.chistovie.ru/articles/" class="default-link" target="_blank">http://www.chistovie.ru/articles/</a></p>
                     </div>
                 </div>
                 <div class="articles-images">
