--- a/app/sass/_main.sass
+++ b/app/sass/_main.sass
@@ -24,7 +24,6 @@ p
 .chistovie-wrapper
 	display: flex
 	flex-direction: column
-	//height: 100%
 	min-width: 1200px
 
 .container
@@ -1099,6 +1098,9 @@ p
 	text-align: right
 	left: -160px
 	width: 120px
+
+.region-text
+	margin: 0 -50px
 
 .chistovie-wrapper
 	.nav-white .nav__menu .nav__menu__contacts .btn
