--- a/app/twig/index.twig
+++ b/app/twig/index.twig
@@ -253,9 +253,11 @@
         <div class="container">
             <div class="section-7-wrapper">
                 <div class="small-title text-center">Настройки региональной привязки</div>
-                <p class="default-text text-center">Чистовье ориентированы на работу по всей России и для хороших результатов продвижения нужна настройка</p>
-                <p class="default-text text-center">региональной привязки в поисковых системах. Мы определили регионы, в которых есть официальные представительства </p>
-                <p class="default-text text-center mb65">и отправили заявки на добавление данных регионов через сервисы Яндекс.Каталог и Google.Business.</p>
+                <div class="region-text">
+                    <p class="default-text text-center">Чистовье ориентированы на работу по всей России и для хороших результатов продвижения нужна настройка</p>
+                    <p class="default-text text-center">региональной привязки в поисковых системах. Мы определили регионы, в которых есть официальные представительства </p>
+                    <p class="default-text text-center mb65">и отправили заявки на добавление данных регионов через сервисы Яндекс.Каталог и Google.Business.</p>
+                </div>
                 <div class="flex">
                     <div class="city wow fadeIn" data-wow-offset="350">Москва</div>
                     <div class="city wow fadeIn" data-wow-offset="350" data-wow-delay="0.3s">Нижний Новгород</div>
