--- a/app/twig/index.twig
+++ b/app/twig/index.twig
@@ -218,7 +218,7 @@
             </div>
             <div class="section-articles">
                 <div class="arrow-wrapper-3 wow fadeIn" data-wow-offset="350">
-                    <div class="arrow arrow_3">
+                    <div class="wow pulse arrow arrow_3" data-wow-iteration="2" data-wow-delay="0.8s" data-wow-duration="0.6s" data-wow-offset="350">
                         <p class="mb10">Новый раздел «Статьи»</p>
                         <p><a href="http://www.chistovie.ru/articles/" class="default-link" target="_blank">http://www.chistovie.ru/articles/</a></p>
                     </div>
