--- a/app/sass/_main.sass
+++ b/app/sass/_main.sass
@@ -45,7 +45,7 @@ p
 	margin: 0 auto
 
 .section_1
-	background: radial-gradient(ellipse at bottom, #feffff 0%,#def4f5 100%)
+	background: radial-gradient(ellipse at 50% bottom, #feffff 0%,#def4f5 50%)
 	height: 874px
 	padding-top: 174px
 	margin-bottom: 6px
@@ -420,12 +420,14 @@ p
 	font-weight: 300
 	font-size: 17px
 	line-height: 1
+	filter: brightness(110%)
 
 .client__large-text
 	color: #65b3ba
 	font-weight: 300
 	font-size: 38px
 	line-height: 1
+	filter: brightness(110%)
 
 .section_3
 	height: 635px
@@ -442,6 +444,7 @@ p
 	width: 840px
 	margin: 0 auto
 	justify-content: space-between
+	align-items: flex-start
 
 .targets-grid__item-1, .targets-grid__item-2, .targets-grid__item-3
 	display: flex
@@ -464,6 +467,7 @@ p
 	font-size: 38px
 	font-weight: 100
 	color: #65b3ba
+	filter: brightness(110%)
 
 .targets-grid__descr
 	line-height: 1.2
@@ -646,10 +650,11 @@ p
 	font-family: "PT Sans"
 	position: absolute
 	font-size: 13px
-	font-style: italic
 	text-align: center
 	font-weight: 100
-	color: #65b3ba
+	filter: brightness(100%)
+	color: #00b6bd
+	font-style: italic
 
 .arrow-wrapper-1
 	position: absolute
@@ -809,6 +814,7 @@ p
 	font-weight: 300
 	color: #00b1b8
 	margin-bottom: 10px
+	filter: brightness(100%)
 
 .articles-blur__1
 	position: absolute
@@ -909,7 +915,7 @@ p
 		margin: 0 auto
 
 		.default-list
-			width: 290px
+			width: 300px
 			margin-right: 140px
 			&:last-child
 				margin-right: 0
@@ -945,6 +951,7 @@ p
 	width: 217px
 	height: 217px
 	border-radius: 50%
+	box-shadow: -5px 0px 40px 2px rgba(0,0,0,0.16)
 
 .traffic__big-circle
 	position: relative
@@ -1028,7 +1035,7 @@ p
 	background-color: #FFFFFF
 	width: 174px
 	height: 174px
-	
+	box-shadow: -5px 0px 40px 2px rgba(0,0,0,0.16)
 
 .orders__big-circle
 	display: flex
