--- a/app/twig/index.twig
+++ b/app/twig/index.twig
@@ -305,7 +305,7 @@
             <p class="default-text text-center mb30">Следим за новыми алгоритмами поисковиков.</p>
             <div class="flex">
                 <ul class="default-list">
-                    <li>Повторный SEO-аудит, проверка актуальности работ;</li>
+                    <li>Повторный SEO-аудит,<br>проверка актуальности работ;</li>
                     <li>анализ уникальности текстов, написание новых;</li>
                     <li>контроль индексации сайта;</li>
                 </ul>
@@ -351,7 +351,7 @@
                         <div class="orders__big-circle">
                             <div class="orders__medium-circle">
                                 <div class="orders__small-circle">
-                                    <span class="orders__count">2,12</span>
+                                    <span class="orders__count">2,56</span>
                                     <span class="orders__text">раза</span>
                                 </div>
                             </div>
