--- a/app/sass/_main.sass
+++ b/app/sass/_main.sass
@@ -81,8 +81,10 @@ p
 	left: 22px
 	width: 207px
 	height: 207px
-	background-color: rgba(#006fa8, 0.6)
+	background-color: rgba(#359dd5, 0.7)
 	border-radius: 50%
+	background-blend-mode: multiply
+	filter: brightness(110%)
 	&::after
 		position: absolute
 		content: ''
@@ -112,6 +114,8 @@ p
 	display: flex
 	align-items: center
 	justify-content: center
+	background-blend-mode: multiply
+	filter: brightness(110%)
 	
 .general-results-orders__small-circle
 	position: absolute
@@ -151,7 +155,7 @@ p
 	display: flex
 	align-items: center
 	justify-content: center
-	background-color: rgba(#009aa0, 0.6)
+	background-color: rgba(#17c6cd, 0.6)
 	border-radius: 50%
 	top: 138px
 	left: 207px
@@ -182,7 +186,7 @@ p
 	display: flex
 	align-items: center
 	justify-content: center
-	background-color: #039fa5
+	background-color: #17c6cd
 	border-radius: 50%
 
 .general-results-visitors__small-circle
@@ -226,6 +230,7 @@ p
 	top: 157px
 	left: 701px
 	background-color: rgba(#32bf6e, 0.6)
+	background-blend-mode: multiply
 	&::after
 		position: absolute
 		content: ''
@@ -255,6 +260,7 @@ p
 	height: 102px
 	background-color: #65af83
 	border-radius: 50%
+	background-blend-mode: multiply
 
 .general-results-google__small-circle
 	position: relative
