--- a/app/sass/_main.sass
+++ b/app/sass/_main.sass
@@ -25,6 +25,7 @@ p
 	display: flex
 	flex-direction: column
 	min-width: 1200px
+	overflow: hidden
 
 .container
 	position: relative
@@ -81,7 +82,7 @@ p
 	left: 22px
 	width: 207px
 	height: 207px
-	background-color: rgba(#359dd5, 0.7)
+	background-color: #64aed6
 	border-radius: 50%
 	background-blend-mode: multiply
 	filter: brightness(110%)
@@ -229,7 +230,7 @@ p
 	border-radius: 50%
 	top: 157px
 	left: 701px
-	background-color: rgba(#32bf6e, 0.6)
+	background-color: #7dd8a4
 	background-blend-mode: multiply
 	&::after
 		position: absolute
