--- a/app/sass/_main.sass
+++ b/app/sass/_main.sass
@@ -82,10 +82,11 @@ p
 	left: 22px
 	width: 207px
 	height: 207px
-	background-color: #64aed6
-	border-radius: 50%
-	background-blend-mode: multiply
-	filter: brightness(110%)
+	background: url("../images/general-results-orders-big-circle.png") no-repeat
+	//background-color: #64aed6
+	//border-radius: 50%
+	//background-blend-mode: multiply
+	//filter: brightness(110%)
 	&::after
 		position: absolute
 		content: ''
@@ -152,14 +153,16 @@ p
 .general-results-visitors__big-circle
 	position: absolute
 	width: 165px
-	height: 165px
+	height: 164px
 	display: flex
 	align-items: center
 	justify-content: center
-	background-color: rgba(#17c6cd, 0.6)
-	border-radius: 50%
+	//background-color: #17c6cd
+	background: url("../images/general-results-visitors-big-circle.png") no-repeat
+	//border-radius: 50%
 	top: 138px
 	left: 207px
+	//background-blend-mode: multiply
 	&::before
 		position: absolute
 		content: ''
@@ -187,7 +190,8 @@ p
 	display: flex
 	align-items: center
 	justify-content: center
-	background-color: #17c6cd
+	background-color: #039fa5
+	background-blend-mode: multiply
 	border-radius: 50%
 
 .general-results-visitors__small-circle
@@ -230,8 +234,9 @@ p
 	border-radius: 50%
 	top: 157px
 	left: 701px
-	background-color: #7dd8a4
-	background-blend-mode: multiply
+	background: url("../images/general-results-google-big-circle.png") no-repeat
+	//background-color: #7dd8a4
+	//background-blend-mode: multiply
 	&::after
 		position: absolute
 		content: ''
@@ -289,8 +294,9 @@ p
 	justify-content: center
 	width: 101px
 	height: 101px
-	background-color: rgba(#dc5c02, 0.7)
-	border-radius: 50%
+	background: url("../images/general-results-yandex-big-circle.png") no-repeat
+	//background-color: rgba(#dc5c02, 0.7)
+	//border-radius: 50%
 	top: 172px
 	left: 820px
 	&::after
