--- a/app/sass/_main.sass
+++ b/app/sass/_main.sass
@@ -108,7 +108,6 @@ p
 		bottom: -42px
 
 .general-results-orders__middle-circle
-	position: absolute
 	width: 155px
 	height: 155px
 	background-color: #4e8dae
@@ -120,7 +119,6 @@ p
 	filter: brightness(110%)
 	
 .general-results-orders__small-circle
-	position: absolute
 	display: flex
 	align-items: center
 	justify-content: center
@@ -184,7 +182,6 @@ p
 		border-radius: 50%
 
 .general-results-visitors__middle-circle
-	position: absolute
 	width: 123px
 	height: 123px
 	display: flex
@@ -195,7 +192,6 @@ p
 	border-radius: 50%
 
 .general-results-visitors__small-circle
-	position: absolute
 	width: 80px
 	height: 80px
 	display: flex
@@ -957,8 +953,9 @@ p
 	top: 310px
 
 .traffic__bigger-circle
-	background: #FFFFFF
+	//background: #FFFFFF
 	display: flex
+	background: url("../images/traffic-bigger-circle.png") no-repeat
 	align-items: center
 	justify-content: center
 	width: 217px
@@ -968,7 +965,8 @@ p
 
 .traffic__big-circle
 	position: relative
-	background-color: #64aed6
+	//background-color: #64aed6
+	background: url("images/traffic-big-circle.png") no-repeat
 	width: 207px
 	height: 207px
 	display: flex
@@ -1045,7 +1043,7 @@ p
 	align-items: center
 	justify-content: center
 	border-radius: 50%
-	background-color: #FFFFFF
+	background: url("../images/orders-bigger-circle.png") no-repeat
 	width: 174px
 	height: 174px
 	box-shadow: -5px 0px 40px 2px rgba(0,0,0,0.16)
