--- a/app/sass/_main.sass
+++ b/app/sass/_main.sass
@@ -962,6 +962,25 @@ p
 	height: 217px
 	border-radius: 50%
 	box-shadow: -5px 0px 40px 2px rgba(0,0,0,0.16)
+	&::after
+		position: absolute
+		content: ""
+		width: 22px
+		height: 2px
+		background-color: #64aed6
+		top: 50%
+		right: -17px
+		transform: translateY(-50%)
+	&::before
+		position: absolute
+		content: ""
+		width: 10px
+		height: 10px
+		border-radius: 50%
+		background-color: #64aed6
+		top: 50%
+		transform: translateY(-50%)
+		right: -27px
 
 .traffic__big-circle
 	position: relative
@@ -973,25 +992,6 @@ p
 	align-items: center
 	justify-content: center
 	border-radius: 50%
-	&::after
-		position: absolute
-		content: ""
-		width: 22px
-		height: 2px
-		background-color: #64aed6
-		top: 50%
-		right: -22px
-		transform: translateY(-50%)
-	&::before
-		position: absolute
-		content: ""
-		width: 10px
-		height: 10px
-		border-radius: 50%
-		background-color: #64aed6
-		top: 50%
-		transform: translateY(-50%)
-		right: -32px
 
 
 .traffic__medium-circle
@@ -1047,6 +1047,25 @@ p
 	width: 174px
 	height: 174px
 	box-shadow: -5px 0px 40px 2px rgba(0,0,0,0.16)
+	&::after
+		position: absolute
+		content: ""
+		width: 22px
+		height: 2px
+		background-color: #17c6cd
+		top: 50%
+		left: -17px
+		transform: translateY(-50%)
+	&::before
+		position: absolute
+		content: ""
+		width: 10px
+		height: 10px
+		border-radius: 50%
+		background-color: #17c6cd
+		top: 50%
+		transform: translateY(-50%)
+		left: -27px
 
 .orders__big-circle
 	display: flex
